--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -11,6 +11,11 @@ body {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  user-select: none;
+}
+
+#brand:hover {
+  cursor: default;
 }
 
 #search-bar {
