--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Chewy');
 
-body {
-  padding: 10px 10px;
+body, #root, #app-root {
+  height: 100%;
+  overflow: hidden;
 }
 
 #brand {
@@ -24,4 +25,13 @@ body {
 
 #top-bar {
   background: rgb(255, 166, 89);
+  padding: 10px 10px;
+}
+
+.graph-plot {
+  height: 100%;
+}
+
+.js-plotly-plot {
+  height: 90%;
 }
