--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -20,10 +20,12 @@ body, #root, #app-root {
 }
 
 #search-bar {
-  float: right;
+  float: left;
+  -webkit-app-region: no-drag;
 }
 
 #top-bar {
+  -webkit-app-region: drag;
   background: rgb(255, 166, 89);
   padding: 10px 10px;
 }
@@ -34,4 +36,13 @@ body, #root, #app-root {
 
 .js-plotly-plot {
   height: 95%;
+}
+
+.window-btn {
+  float: right;
+  padding-left: 20px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-app-region: no-drag;
 }
