--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -8,11 +8,15 @@ body, #root, #app-root {
 #brand {
   font-family: 'Chewy', cursive;
   text-align: center;
-  vertical-align: center;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  font-size: 1.5em;
   user-select: none;
+  padding-left: 20px;
+}
+
+.window-btn {
+  float: right;
+  padding-left: 20px;
+  -webkit-app-region: no-drag;
 }
 
 #brand:hover {
@@ -20,7 +24,6 @@ body, #root, #app-root {
 }
 
 #search-bar {
-  float: left;
   -webkit-app-region: no-drag;
 }
 
@@ -30,19 +33,21 @@ body, #root, #app-root {
   padding: 10px 10px;
 }
 
-.graph-plot {
+.js-plotly-plot {
   height: 100%;
 }
 
-.js-plotly-plot {
-  height: 95%;
+#spinner {
+  padding-top: 27%;
+  display: flex;
+  justify-content: center;
 }
 
-.window-btn {
-  float: right;
-  padding-left: 20px;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  -webkit-app-region: no-drag;
+.left {
+  float: left;
 }
+
+.right {
+  float: right;
+}
+
